Remove dependency.